--- a/arma3.html
+++ b/arma3.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="/images/logo.png" alt="Logo Delta Force MilSim Clan">
+                <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
             </div>
             <nav>
                 <ul>
@@ -29,7 +29,7 @@
 
     <main>
         <section class="game-hero">
-            <img src="/images/ArmA_3_Screenshot_2024.09.02_-_19.23.14.27.png" alt="Arma 3 Hero Image">
+            <img src="images/ArmA_3_Screenshot_2024.09.02_-_19.23.14.27.png" alt="Arma 3 Hero Image">
         </section>
 
         <section class="game-content">
@@ -41,16 +41,16 @@
             <div class="carousel-container">
                 <div class="carousel">
                     <div class="carousel-slide">
-                    <img src="/images/carousel-inner/car2.jpg" alt="Arma 3 Screenshot 1">
+                    <img src="images/carousel-inner/car2.jpg" alt="Arma 3 Screenshot 1">
                     </div>
                     <div class="carousel-slide">
-                        <img src="/images/carousel-inner/car5.png" alt="Arma 3 Screenshot 1">
+                        <img src="images/carousel-inner/car5.png" alt="Arma 3 Screenshot 1">
                         </div>
                         <div class="carousel-slide">
-                            <img src="/images/carousel-inner/car6.png" alt="Arma 3 Screenshot 1">
+                            <img src="images/carousel-inner/car6.png" alt="Arma 3 Screenshot 1">
                             </div>
                             <div class="carousel-slide">
-                                <img src="/images/carousel-inner/car7.png" alt="Arma 3 Screenshot 1">
+                                <img src="images/carousel-inner/car7.png" alt="Arma 3 Screenshot 1">
                                 </div>
                 </div>
                 <button class="carousel-button prev">&lt;</button>
