Solved various issues
Fixed mobile menu and video playing

--- a/arma3.html
+++ b/arma3.html
@@ -13,25 +13,24 @@
             <div class="logo">
                 <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
             </div>
-            <button id="menu-toggle" class="menu-toggle">
+            <button class="menu-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
-            <nav id="main-nav">
+            <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#chi-siamo">Chi Siamo</a></li>
                     <li><a href="index.html#sezioni">Sezioni</a></li>
                     <li><a href="index.html#requisiti">Requisiti</a></li>
-                    
-                    
+                    <li><a href="index.html#merchandise">Merchandise</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <main>
+    <main role="main">
         <section class="game-hero">
             <img src="images/ArmA_3_Screenshot_2024.09.02_-_19.23.14.27.png" alt="Arma 3 Hero Image">
         </section>
@@ -39,31 +38,38 @@
         <section class="game-content">
             <div class="game-description">
                 <h1>Arma 3</h1>
-                <p>Dal 2020 siamo presenti in ARMA III con l'intenzione di svolgere scenari sempre piu immersivi e simulativi, mettiamo la massima cura nel dettaglio sia degli equipaggiamenti, degli armamenti che per quanto riguarda gli scenari che realiziamo e che ci impegniamo a gestire grazie all'esperienza che con il tempo abbiamo guadagnato.</p>
-                <p>Simuliamo reparti di operazioni speciali americani di primo e secondo livello: in particolare replichiamo il Red Squadron del NSWDG con due team ben formati e addestrati su tutte le procedure e le tecniche che servono a svolgere operazioni Tier-1. In piu abbiamo anche una sezione di piloti dedicata al 160th SOAR, una dedicata all'AFSOC in cui e' presente il 24th STS. Abbiamo un server privato su cui svolgiamo addestramenti, esercitazioni, missioni stand-alone, campagne di operazioni speciali e missioni interclan.</p>
+                <p>Dal 2020 siamo presenti in ARMA III con l'intenzione di svolgere scenari sempre più immersivi e simulativi. Mettiamo la massima cura nel dettaglio sia degli equipaggiamenti, degli armamenti che per quanto riguarda gli scenari che realizziamo e che ci impegniamo a gestire grazie all'esperienza che con il tempo abbiamo guadagnato.</p>
+                <p>Simuliamo reparti di operazioni speciali americani di primo e secondo livello: in particolare replichiamo il Red Squadron del NSWDG con due team ben formati e addestrati su tutte le procedure e le tecniche che servono a svolgere operazioni Tier-1. In più abbiamo anche una sezione di piloti dedicata al 160th SOAR, una dedicata all'AFSOC in cui è presente il 24th STS. Abbiamo un server privato su cui svolgiamo addestramenti, esercitazioni, missioni stand-alone, campagne di operazioni speciali e missioni interclan.</p>
             </div>
+
             <div class="carousel-container">
                 <div class="carousel">
                     <div class="carousel-slide">
-                    <img src="images/carousel-inner/car2.jpg" alt="Arma 3 Screenshot 1">
+                        <img src="images/carousel-inner/car2.jpg" alt="Arma 3 Screenshot 1">
                     </div>
                     <div class="carousel-slide">
-                        <img src="images/carousel-inner/car5.png" alt="Arma 3 Screenshot 1">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/carousel-inner/car6.png" alt="Arma 3 Screenshot 1">
-                            </div>
-                            <div class="carousel-slide">
-                                <img src="images/carousel-inner/car7.png" alt="Arma 3 Screenshot 1">
-                                </div>
+                        <img src="images/carousel-inner/car5.png" alt="Arma 3 Screenshot 2">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/carousel-inner/car6.png" alt="Arma 3 Screenshot 3">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/carousel-inner/car7.png" alt="Arma 3 Screenshot 4">
+                    </div>
                 </div>
-                <button class="carousel-button prev">&lt;</button>
-                <button class="carousel-button next">&gt;</button>
+                <button class="carousel-button prev" aria-label="Previous slide">&lt;</button>
+                <button class="carousel-button next" aria-label="Next slide">&gt;</button>
             </div>
         </section>
     </main>
 
     <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/bcn_multigamingclan" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/bcnmultigamingteam" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.youtube.com/@BrigataCorviNeri" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.twitch.tv/brigatacorvinericlan" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitch"></i></a>
+        </div>
         <p>&copy; 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
     </footer>
 
