--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brigata Corvi Neri</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <script src="script.js" defer></script>
+
 </head>
 <body>
     <header>
@@ -67,12 +70,12 @@
             </div>
         
             <div class="subsection image-left">
+                <div class="image-content">
+                    <img src="images/carousel-inner/car1.jpg" alt="Lo Stile">
+                </div>
                 <div class="text-content">
                     <h3>Lo Stile</h3>
                     <p>Nei videogiochi tattici, la Multigaming adotta lo stile di gioco <strong>Mil-Sim</strong>, caratteristica che ci contraddistingue in assoluto. Immersività, gioco di squadra e <strong>simulazione</strong>, sono i cardini alla base del nostro approccio ai videogiochi.</p>
-                </div>
-                <div class="image-content">
-                    <img src="images/carousel-inner/car1.jpg" alt="Lo Stile">
                 </div>
             </div>
         </section>
@@ -101,17 +104,49 @@
             </div>
         </div>
 
-        <div id="requisiti" class="section">
-            <h2>Requisiti</h2>
-            <ul>
-                <li>Età minima 21 anni.</li>
-                <li>Non si deve far parte di nessun Team/Clan/Multigaming o community.</li>
-                <li>Si devono possedere account senza VAC BAN o altre sanzioni.</li>
-                <li>Disponibilità di orario per gli eventi che organizza la Multigaming.</li>
-                <li>Saper rispettare le regole e la gerarchia della Multigaming (Gradi e incarichi)</li>
-                <li>Attitudine alla disciplina milsim.</li>
-            </ul>
-        </div>
+        <section id="requisiti" class="section classified-document">
+            <div class="document-header">
+                <h2>Requisiti di Ammissione</h2>
+                <span class="classified-stamp">Top Secret</span>
+            </div>
+            <div class="document-content">
+                <div class="requisiti-container">
+                    <div class="requisito">
+                        <i class="fas fa-user-clock"></i>
+                        <h3>Età Minima</h3>
+                        <p>21 anni compiuti</p>
+                    </div>
+                    <div class="requisito">
+                        <i class="fas fa-users-slash"></i>
+                        <h3>Esclusività</h3>
+                        <p>Nessuna appartenenza ad altri clan o community</p>
+                    </div>
+                    <div class="requisito">
+                        <i class="fas fa-user-shield"></i>
+                        <h3>Account Pulito</h3>
+                        <p>Nessun VAC BAN o altre sanzioni</p>
+                    </div>
+                    <div class="requisito">
+                        <i class="fas fa-calendar-check"></i>
+                        <h3>Disponibilità</h3>
+                        <p>Partecipazione regolare agli eventi del clan</p>
+                    </div>
+                    <div class="requisito">
+                        <i class="fas fa-clipboard-list"></i>
+                        <h3>Rispetto delle Regole</h3>
+                        <p>Aderenza alla gerarchia e alle norme del clan</p>
+                    </div>
+                    <div class="requisito">
+                        <i class="fas fa-chess-knight"></i>
+                        <h3>Attitudine Milsim</h3>
+                        <p>Predisposizione alla simulazione militare</p>
+                    </div>
+                </div>
+            </div>
+            <div class="document-footer">
+                <p>Classificato - Solo per uso interno</p>
+            </div>
+        </section>
 
         <div id="merchandise" class="section merchandise-section">
             <h2>Merchandise Ufficiale</h2>
@@ -127,7 +162,7 @@
         </div>
     </main>
 
-    <div id="stats-widget" class="stats-widget closed">
+    <div id="stats-widget" class="stats-widget">
         <button class="close-widget">×</button>
         <div class="widget-content">
             <h3>Statistiche Clan</h3>
@@ -145,7 +180,7 @@
             </div>
         </div>
     </div>
-    <button id="reopen-widget" class="hidden">📊</button>
+    <button id="reopen-widget">📊</button>
 
     <footer>
         <div class="social-icons">
