--- a/arma3.html
+++ b/arma3.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delta Force MilSim Clan - Arma 3</title>
+    <title>Arma 3 - Delta Force MilSim Clan</title>
     <link rel="stylesheet" href="main.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-   <header>
+    <header>
         <div class="navbar">
             <div class="logo">
                 <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
             </div>
-            <button class="menu-toggle" aria-label="Toggle menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#video-container">Home</a></li>
                     <li><a href="index.html#chi-siamo">Chi Siamo</a></li>
                     <li><a href="index.html#sezioni">Sezioni</a></li>
                     <li><a href="index.html#requisiti">Requisiti</a></li>
                     <li><a href="index.html#merchandise">Merchandise</a></li>
                 </ul>
             </nav>
+            <button class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
-    <main role="main">
+    <main>
         <section class="game-hero">
             <img src="images/ArmA_3_Screenshot_2024.09.02_-_19.23.14.27.png" alt="Arma 3 Hero Image">
         </section>
@@ -57,11 +57,31 @@
                         <img src="images/carousel-inner/car7.png" alt="Arma 3 Screenshot 4">
                     </div>
                 </div>
-                <button class="carousel-button prev" aria-label="Previous slide">&lt;</button>
-                <button class="carousel-button next" aria-label="Next slide">&gt;</button>
+                <button class="carousel-button prev">&lt;</button>
+                <button class="carousel-button next">&gt;</button>
             </div>
         </section>
     </main>
+
+    <div id="stats-widget" class="stats-widget closed">
+        <button class="close-widget">×</button>
+        <div class="widget-content">
+            <h3>Statistiche Clan</h3>
+            <div class="stat-item">
+                <span class="stat-label">Membri Attivi:</span>
+                <span id="active-members" class="stat-value">150</span>
+            </div>
+            <div class="stat-item">
+                <span class="stat-label">Reclutamenti (Squad):</span>
+                <span id="squad-recruitment" class="stat-value">APERTI</span>
+            </div>
+            <div class="stat-item">
+                <span class="stat-label">Reclutamenti (ArmaIII):</span>
+                <span id="arma-recruitment" class="stat-value">APERTI</span>
+            </div>
+        </div>
+    </div>
+    <button id="reopen-widget">📊</button>
 
     <footer>
         <div class="social-icons">
@@ -70,9 +90,10 @@
             <a href="https://www.youtube.com/@BrigataCorviNeri" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
             <a href="https://www.twitch.tv/brigatacorvinericlan" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitch"></i></a>
         </div>
-        <p>&copy; 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
+        <p>© 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
     </footer>
 
-    <script src="game-pages.js"></script>
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
