--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Il tuo browser non supporta il tag video.
         </video>
         <div class="video-overlay">
-            <h1>BRIGATA CORVI NERI</h1>
+            <h1>BRIGATA CORVI NERI MULTIGAMING</h1>
             <p>Esperienza realistica, strategia avanzata, cameratismo ineguagliabile</p>
             <button id="recruit-btn">Unisciti Ora</button>
         </div>
@@ -47,7 +47,7 @@
 
     <main>
         <section id="chi-siamo">
-            <h2>Brigata Corvi Neri</h2>
+            <h2>Brigata Corvi Neri Multigaming</h2>
         
             <div class="chi-siamo-main">
                 <div class="text-content">
