--- a/arma3.html
+++ b/arma3.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
+                <img src="images/logo.png" alt="Logo Brigata Corvi Neri">
             </div>
             <nav>
                 <ul>
@@ -40,6 +40,10 @@
                 <h1>Arma 3</h1>
                 <p>Dal 2020 siamo presenti in ARMA III con l'intenzione di svolgere scenari sempre più immersivi e simulativi. Mettiamo la massima cura nel dettaglio sia degli equipaggiamenti, degli armamenti che per quanto riguarda gli scenari che realizziamo e che ci impegniamo a gestire grazie all'esperienza che con il tempo abbiamo guadagnato.</p>
                 <p>Simuliamo reparti di operazioni speciali americani di primo e secondo livello: in particolare replichiamo il Red Squadron del NSWDG con due team ben formati e addestrati su tutte le procedure e le tecniche che servono a svolgere operazioni Tier-1. In più abbiamo anche una sezione di piloti dedicata al 160th SOAR, una dedicata all'AFSOC in cui è presente il 24th STS. Abbiamo un server privato su cui svolgiamo addestramenti, esercitazioni, missioni stand-alone, campagne di operazioni speciali e missioni interclan.</p>
+                <button id="recruit-btn">
+                    <a href="https://discord.gg/MMrgwkAVw5">Unisciti Ora</a>
+    
+                </button>
             </div>
 
             <div class="carousel-container">
@@ -61,6 +65,7 @@
                 <button class="carousel-button next">&gt;</button>
             </div>
         </section>
+        
     </main>
 
     <div id="stats-widget" class="stats-widget closed">
@@ -90,7 +95,7 @@
             <a href="https://www.youtube.com/@BrigataCorviNeri" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
             <a href="https://www.twitch.tv/brigatacorvinericlan" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitch"></i></a>
         </div>
-        <p>© 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
+        <p>© 2024 Brigata Corvi Neri Multigaming. Tutti i diritti riservati.</p>
     </footer>
 
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
