--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
+                <img src="images/logo.png" alt="Logo Brigata Corvi Neri">
             </div>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <span></span>
@@ -41,7 +41,10 @@
         <div class="video-overlay">
             <h1>BRIGATA CORVI NERI MULTIGAMING</h1>
             <p>Esperienza realistica, strategia avanzata, cameratismo ineguagliabile</p>
-            <button id="recruit-btn">Unisciti Ora</button>
+            <button id="recruit-btn">
+                <a href="https://discord.gg/MMrgwkAVw5">Unisciti Ora</a>
+
+            </button>
         </div>
     </div>
 
@@ -152,10 +155,10 @@
             <h2>Merchandise Ufficiale</h2>
             <div class="merchandise-content">
                 <div class="merchandise-image">
-                    <img src="images/Merch.jpeg" alt="Delta Force MilSim Clan Merchandise">
+                    <img src="images/Merch.jpeg" alt="Merch Brigata Corvi Neri">
                 </div>
                 <div class="merchandise-description">
-                    <p>Indossa con orgoglio i colori del Delta Force MilSim Clan! La nostra linea di merchandise include t-shirt, felpe, cappelli e molto altro, tutti con il nostro logo iconico e design esclusivi ispirati alle nostre missioni.</p>
+                    <p>Indossa con orgoglio i colori della Brigata! La nostra linea di merchandise include t-shirt, felpe, cappelli e molto altro, tutti con il nostro logo iconico e design esclusivi ispirati alle nostre missioni.</p>
                     <a href="https://your-merch-store-url.com" class="cta-button" target="_blank" rel="noopener noreferrer">Acquista Ora</a>
                 </div>
             </div>
@@ -189,7 +192,7 @@
             <a href="https://www.youtube.com/@BrigataCorviNeri" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
             <a href="https://www.twitch.tv/brigatacorvinericlan" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitch"></i></a>
         </div>
-        <p>© 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
+        <p>© 2024 Brigata Corvi Neri Multigaming. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
