--- a/squad.html
+++ b/squad.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="Logo Delta Force MilSim Clan">
+                <img src="images/logo.png" alt="Logo Brigata Corvi Neri">
             </div>
             <nav>
                 <ul>
@@ -40,6 +40,11 @@
                 <h1>Squad</h1>
                 <p>Dal 2019 Brigata Corvi Neri Multigaming è presente nella community di SQUAD con l'obiettivo di portare simulazione e immersività nel metodo di gioco di questo importante titolo tattico multigiocatore PvP. Ciò che facciamo è riprodurre sul campo di battaglia quante più tattiche, tecniche e procedure possibili sempre restando nei limiti a cui il gioco stesso ci sottopone.</p>
                 <p>Per fare ciò svolgiamo numerosi addestramenti per le nuove reclute e regolari esercitazioni per i più veterani allo scopo di continuare a migliorare insieme aumentando l'affiatamento e l'intesa nel gioco di squadra. Il nostro obiettivo è la coordinazione, la comunicazione e la conquista degli obiettivi della fazione mantenendo sempre disciplina e serietà.</p>
+                
+                <button id="recruit-btn">
+                    <a href="https://discord.gg/MMrgwkAVw5">Unisciti Ora</a>
+    
+                </button>
             </div>
 
             <div class="carousel-container">
@@ -90,7 +95,7 @@
             <a href="https://www.youtube.com/@BrigataCorviNeri" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
             <a href="https://www.twitch.tv/brigatacorvinericlan" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitch"></i></a>
         </div>
-        <p>© 2024 Delta Force MilSim Clan. Tutti i diritti riservati.</p>
+        <p>© 2024 Brigata Corvi Neri. Tutti i diritti riservati.</p>
     </footer>
 
     <script src="script.js"></script>
