--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </video>
         <div class="video-overlay">
             <h1>BRIGATA CORVI NERI MULTIGAMING</h1>
-            <p>Esperienza realistica, strategia avanzata, cameratismo ineguagliabile</p>
+            <p>Esperienza realistica, strategia avanzata, simulazione pura</p>
             <button id="recruit-btn">
                 <a href="https://discord.gg/MMrgwkAVw5">Unisciti Ora</a>
 
@@ -158,8 +158,8 @@
                     <img src="images/Merch.jpeg" alt="Merch Brigata Corvi Neri">
                 </div>
                 <div class="merchandise-description">
-                    <p>Indossa con orgoglio i colori della Brigata! La nostra linea di merchandise include t-shirt, felpe, cappelli e molto altro, tutti con il nostro logo iconico e design esclusivi ispirati alle nostre missioni.</p>
-                    <a href="https://your-merch-store-url.com" class="cta-button" target="_blank" rel="noopener noreferrer">Acquista Ora</a>
+                    <p>Indossa con orgoglio i colori della Brigata! I nostri partner ufficiali hanno creato una linea di merchandise che include t-shirt, felpe, cappelli e molto altro, tutti con il nostro logo iconico e design esclusivi ispirati alle nostre missioni. Clicca qui per visitare il loro sito e scoprire la collezione completa.</p>
+                    <a href="https://www.kappamomi.com/category/all-products" class="cta-button" target="_blank" rel="noopener noreferrer">Acquista Ora</a>
                 </div>
             </div>
         </div>
@@ -171,7 +171,7 @@
             <h3>Statistiche Clan</h3>
             <div class="stat-item">
                 <span class="stat-label">Membri Attivi:</span>
-                <span id="active-members" class="stat-value">150</span>
+                <span id="active-members" class="stat-value">21</span>
             </div>
             <div class="stat-item">
                 <span class="stat-label">Reclutamenti (Squad):</span>
