--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
             </div>
             <div class="stat-item">
                 <span class="stat-label">Reclutamenti (Squad):</span>
-                <span id="squad-recruitment" class="stat-value">APERTI</span>
+                <span id="squad-recruitment" class="stat-value">CHIUSI</span>
             </div>
             <div class="stat-item">
                 <span class="stat-label">Reclutamenti (ArmaIII):</span>
-                <span id="arma-recruitment" class="stat-value">APERTI</span>
+                <span id="arma-recruitment" class="stat-value">CHIUSI</span>
             </div>
         </div>
     </div>
