Changed recruitments status arma 3 and updated active members number

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h3>Statistiche Clan</h3>
             <div class="stat-item">
                 <span class="stat-label">Membri Attivi:</span>
-                <span id="active-members" class="stat-value">21</span>
+                <span id="active-members" class="stat-value">25</span>
             </div>
             <div class="stat-item">
                 <span class="stat-label">Reclutamenti (Squad):</span>
@@ -179,7 +179,7 @@
             </div>
             <div class="stat-item">
                 <span class="stat-label">Reclutamenti (ArmaIII):</span>
-                <span id="arma-recruitment" class="stat-value">APERTI</span>
+                <span id="arma-recruitment" class="stat-value">CHIUSI</span>
             </div>
         </div>
     </div>
